Fixed gap between navbar and pages

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -43,4 +43,5 @@
 
 .navbar-elements {
   align-items: stretch;
+  margin: 0px;
 }
